# pal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/pal/: claude.py  cli.py  codex.py  completion.py  config.py  git.py  local_files.py  vscode.py
src/wtfa/: cli.py  codex.py  config.py  git.py  vscode.py
tests/: test_claude_cmd.py  test_cli_commands.py  test_cli_smoke.py  test_codex_cmd.py  test_completion.py  test_config.py  test_git.py  test_local_files.py
