[project]
name = "wtfa"
version = "0.1.0"
description = "Worktree for Agents: multi-repo feature workspaces using git worktrees."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Giorgio Giannoni"}]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "platformdirs>=4.0.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
wtfa = "wtfa.cli:app"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"
