[project]
name = "pal"
version = "0.1.0"
description = "Pal: multi-repo feature workspaces using git worktrees (Codex-friendly)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Giorgio Giannoni"}]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "platformdirs>=4.0.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
]

[project.scripts]
pal = "pal.cli:app"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"
