[project]
name = "pal"
version = "0.2.0"
description = "Pal: multi-repo feature workspaces using git worktrees (agent-friendly)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Giorgio Giannoni"}]
keywords = ["git", "worktree", "cli", "developer-tools", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "platformdirs>=4.0.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Repository = "https://github.com/gegianno/pal"
Issues = "https://github.com/gegianno/pal/issues"
Changelog = "https://github.com/gegianno/pal/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
]
dev = [
  "pre-commit>=3.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
pal = "pal.cli:app"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pal = ["py.typed"]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"
